# dynamic-crew-ai-deep-research

./: README.md  pyproject.toml
src/parallel/: main.py
src/parallel/crews/: __init__.py
src/parallel/crews/planning_crew/: PlanningCrew.py
src/parallel/crews/planning_crew/config/: agents.yaml
src/parallel/crews/report_crew/: ReportCrew.py
src/parallel/flows/: __init__.py  dynamic_report_flow.py
