[project]
name = "parallel"
version = "0.1.0"
description = "Demonstrating parallel patterns with CrewAI"
authors = [{ name = "Rick Jang", email = "jyjang@uengine.org" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.98.0,<1.0.0"
]

[project.scripts]
parallel_workflows = "crewai_parallel_patterns.main:run"
run_crew = "parallel.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
